--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1936,6 +1936,12 @@
     </CRMWebResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BidReviewCustomisations\BidReviewCustomisations.csproj">
+      <Name>BidReviewCustomisations</Name>
+      <Project>{f5f3bcd5-5f9d-4ca4-afad-5432d1dd455b}</Project>
+      <Private>True</Private>
+      <SilverlightApplication>False</SilverlightApplication>
+    </ProjectReference>
     <ProjectReference Include="..\OpportunityCustomizations\OpportunityCustomizations.csproj">
       <Name>OpportunityCustomizations</Name>
       <Project>{76903b4a-63b0-4e0e-a3dd-aa3e6552b1dd}</Project>
