--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1283,6 +1283,11 @@
       <UniqueName>new_arup_Opportunity_Changes</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\Contact_main_library.js">
+      <DisplayName>Contact_main_library</DisplayName>
+      <UniqueName>arup_Contact_main_library</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_dynamic_display_of_fieldvalue.js">
       <DisplayName>JScript1</DisplayName>
       <UniqueName>new_JScript1</UniqueName>
@@ -1936,6 +1941,18 @@
     </CRMWebResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ContactCustomisation\ContactCustomisation.csproj">
+      <Name>ContactCustomisation</Name>
+      <Project>{936e103d-ed9e-4eb4-9f60-6f88d479dbb1}</Project>
+      <Private>True</Private>
+      <SilverlightApplication>False</SilverlightApplication>
+    </ProjectReference>
+    <ProjectReference Include="..\LeadCustomisation\LeadCustomisation.csproj">
+      <Name>LeadCustomisation</Name>
+      <Project>{76930c4f-5069-4756-9878-7c42fcaeae2a}</Project>
+      <Private>True</Private>
+      <SilverlightApplication>False</SilverlightApplication>
+    </ProjectReference>
     <ProjectReference Include="..\OpportunityCustomizations\OpportunityCustomizations.csproj">
       <Name>OpportunityCustomizations</Name>
       <Project>{76903b4a-63b0-4e0e-a3dd-aa3e6552b1dd}</Project>
