--- a/LeadCustomisation/LeadCustomisation.csproj
+++ b/LeadCustomisation/LeadCustomisation.csproj
@@ -4,16 +4,16 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <SchemaVersion>2.0</SchemaVersion>
     <OutputType>Library</OutputType>
-    <ProjectGuid>{C064A39B-A8C6-41E0-8C87-9D948D5C8942}</ProjectGuid>
+    <ProjectGuid>{76930C4F-5069-4756-9878-7C42FCAEAE2A}</ProjectGuid>
     <ProjectTypeGuids>{4B952A0A-A664-46EC-8D7E-51EBEA2E954D};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OrganisationCustomisations</RootNamespace>
-    <AssemblyName>CRM Web Resources.OrganisationCustomisations</AssemblyName>
+    <RootNamespace>LeadCustomisation</RootNamespace>
+    <AssemblyName>CRM Web Resources.LeadCustomisation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <SolutionPackagerDir>C:\Users\Raul.Fernandes\source\repos\CRM Tools\CRM SDK\Bin</SolutionPackagerDir>
-    <SolutionLocToolsDir>C:\Users\Raul.Fernandes\source\repos\CRM Tools\CRM SDK\Bin</SolutionLocToolsDir>
+    <SolutionPackagerDir>C:\Work\Tools\SDK8\SDK\Bin</SolutionPackagerDir>
+    <SolutionLocToolsDir>C:\Work\Tools\SDK8\SDK\Bin</SolutionLocToolsDir>
     <SolutionType>0</SolutionType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -68,56 +68,43 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Entities\Account\Entity.xml" />
-    <Content Include="Entities\Account\FormXml\main\{8448b78f-8f42-454e-8e2a-f8196b0419af}.xml" />
-    <Content Include="Entities\Account\FormXml\quickCreate\{c9e7ec2d-efca-4e4c-b3e3-f63c4bba5e4b}.xml" />
-    <Content Include="Entities\Account\RibbonDiff.xml" />
+    <Content Include="Entities\Lead\Entity.xml" />
+    <Content Include="Entities\Lead\FormXml\main\{e3b6ddb7-8df0-4410-ac7b-fd32e5053d38}.xml" />
+    <Content Include="Entities\Lead\FormXml\quickCreate\{aa7c154f-e2f8-45db-b780-a9a8a96332fe}.xml" />
+    <Content Include="Entities\Lead\RibbonDiff.xml" />
     <Content Include="Other\Customizations.xml" />
     <Content Include="Other\Relationships.xml" />
     <Content Include="Other\Solution.xml" />
     <Content Include="Resources\en-US\resources.en-US.resx" />
     <Content Include="Resources\template_resources.resx" />
-    <Content Include="WebResources\arup_CreditChecks.jscript">
-      <WebResourceId>3fbdc145-611e-e911-8118-005056b509e1</WebResourceId>
-      <Name>arup_CreditChecks</Name>
-      <DisplayName>Due Diligence and Credit Checks</DisplayName>
+    <Content Include="WebResources\arup_dynamic_display_of_fieldvalue.jscript">
+      <WebResourceId>90282575-ce1c-ea11-812e-00505690cb20</WebResourceId>
+      <Name>arup_dynamic_display_of_fieldvalue</Name>
+      <DisplayName>dynamic_display_of_fieldvalue</DisplayName>
+      <LanguageCode>1033</LanguageCode>
       <WebResourceType>JScript</WebResourceType>
       <IntroducedVersion>1.0.0.0</IntroducedVersion>
       <IsCustomizable>True</IsCustomizable>
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
-    <Content Include="WebResources\ccrm_account_main_library.js">
-      <WebResourceId>cbcdffb3-8189-e611-80ed-005056b55b13</WebResourceId>
-      <Name>ccrm_account_main_library.js</Name>
-      <DisplayName>Scripts/Account_main_library.js</DisplayName>
+    <Content Include="WebResources\ccrm_lead_library_2015.jscript">
+      <WebResourceId>c8415326-5ce1-e611-80f5-005056b55b13</WebResourceId>
+      <Name>ccrm_lead_library_2015</Name>
+      <DisplayName>Lead Library 2015</DisplayName>
       <WebResourceType>JScript</WebResourceType>
       <IntroducedVersion>1.0</IntroducedVersion>
       <IsCustomizable>True</IsCustomizable>
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
-    <Content Include="WebResources\ccrm_Common_library.js">
-      <WebResourceId>6c15a5a6-745c-e111-b7c2-005056af0014</WebResourceId>
-      <Name>ccrm_Common_library.js</Name>
-      <DisplayName>Scripts/Common_library.js</DisplayName>
-      <LanguageCode>1033</LanguageCode>
+    <Content Include="WebResources\Lead_main_library.js">
+      <WebResourceId>c2d46bbe-d0b1-e111-a5b9-78e7d1652028</WebResourceId>
+      <Name>Lead_main_library.js</Name>
+      <DisplayName>Scripts/Lead.js</DisplayName>
+      <Description>Default Form User Library</Description>
       <WebResourceType>JScript</WebResourceType>
       <IntroducedVersion>1.0</IntroducedVersion>
-      <IsCustomizable>True</IsCustomizable>
-      <CanBeDeleted>True</CanBeDeleted>
-      <IsHidden>False</IsHidden>
-    </Content>
-    <Content Include="WebResources\ccrm_Customer_main_library.js">
-      <WebResourceId>0c3652db-745c-e111-b7c2-005056af0014</WebResourceId>
-      <Name>ccrm_Customer_main_library.js</Name>
-      <DisplayName>Scripts/Customer.js</DisplayName>
-      <LanguageCode>1033</LanguageCode>
-      <WebResourceType>JScript</WebResourceType>
-      <IntroducedVersion>1.0</IntroducedVersion>
-      <IsCustomizable>True</IsCustomizable>
-      <CanBeDeleted>True</CanBeDeleted>
-      <IsHidden>False</IsHidden>
     </Content>
   </ItemGroup>
   <Import Project="Microsoft.Crm.SolutionProjects.Metadata.targets" />
