--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1693,6 +1693,11 @@
       <UniqueName>arup_sc_MultiSelect_OnSave</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Web Page %28HTML%29\arup_bidReviewTabs.html">
+      <DisplayName>Bid Review Tabs</DisplayName>
+      <UniqueName>arup_bidReviewTabs</UniqueName>
+      <WebResourceType>WebPage</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Web Page %28HTML%29\arup_BlankHTML">
       <DisplayName>arup_BlankHTML</DisplayName>
       <UniqueName>arup_arup_BlankHTML</UniqueName>
@@ -1789,7 +1794,7 @@
       <UniqueName>arup_ccrm_CRMSuperUsers</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\Web Page %28HTML%29\ccrm_CRMTabs">
+    <CRMWebResource Include="WebResources\Web Page (HTML)\ccrm_CRMTabs.html">
       <DisplayName>ccrm_CRMTabs</DisplayName>
       <UniqueName>arup_ccrm_CRMTabs</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
@@ -1934,26 +1939,6 @@
       <UniqueName>arup_sc_MultiSelect</UniqueName>
       <WebResourceType>WebPage</WebResourceType>
     </CRMWebResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BidReviewCustomisations\BidReviewCustomisations.csproj">
-      <Name>BidReviewCustomisations</Name>
-      <Project>{f5f3bcd5-5f9d-4ca4-afad-5432d1dd455b}</Project>
-      <Private>True</Private>
-      <SilverlightApplication>False</SilverlightApplication>
-    </ProjectReference>
-    <ProjectReference Include="..\OpportunityCustomizations\OpportunityCustomizations.csproj">
-      <Name>OpportunityCustomizations</Name>
-      <Project>{76903b4a-63b0-4e0e-a3dd-aa3e6552b1dd}</Project>
-      <Private>True</Private>
-      <SilverlightApplication>False</SilverlightApplication>
-    </ProjectReference>
-    <ProjectReference Include="..\OrganisationCustomisations\OrganisationCustomisations.csproj">
-      <Name>OrganisationCustomisations</Name>
-      <Project>{c064a39b-a8c6-41e0-8c87-9d948d5c8942}</Project>
-      <Private>True</Private>
-      <SilverlightApplication>False</SilverlightApplication>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!--<Import Project="$(MSBuildExtensionsPath32)\Microsoft\CRM\Microsoft.CrmDeveloperTools.12.targets" />-->
